--- a/MarsFramework/Config/MarsResource.resx
+++ b/MarsFramework/Config/MarsResource.resx
@@ -129,12 +129,12 @@
     <comment>If true Login, else Register</comment>
   </data>
   <data name="ReportPath" xml:space="preserve">
-    <value>MarsFramework\TestReporter\Reports</value>
+    <value>MarsFramework\TestReporter\Reports\Test.html</value>
   </data>
   <data name="ReportXMLPath" xml:space="preserve">
-    <value>your path</value>
+    <value>MarsFramework\TestReporter\Reports\Test.html</value>
   </data>
   <data name="ScreenShotPath" xml:space="preserve">
-    <value>MarsFramework\TestReporter\Screenshots</value>
+    <value>MarsFramework\TestReporter\Screenshots\</value>
   </data>
 </root>
